<?xml version="1.0"?>
<package>
  <name>arti_cmd_vel_smoother</name>
  <version>1.0.0</version>
  <description>Filter for command velocities</description>
  <license>BSD</license>

  <maintainer email="s.loigge@arti-robots.com">Stefan Loigge</maintainer>

  <author email="s.loigge@arti-robots.com">Stefan Loigge</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
